--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>07 - Image Gallery</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css" type="text/css">
+  <title>07 - Image Gallery</title>
+</head>
+
+<body>
     <div class="column">
-      <img class="pic" src="egg.jpg" width="200" height="200" alt="">
-      <img class="pic" src="milkshake.jpg" width="200" height="200" alt="">
-      <img class="pic" src="orange.jpg" width="200" height="200" alt="">
-      <img class="pic" src="steak.jpeg" width="200" height="200" alt="">
+      <img class="pic" src="egg.jpg" alt="">
+      <img class="pic" src="milkshake.jpg" alt="">
+      <img class="pic" src="orange.jpg" alt="">
+      <img class="pic" src="steak.jpg" alt="">
     </div>
     <div class="column">
-      <img class="pic" src="sushi.jpg" width="200" height="200" alt="">
-      <img class="pic" src="watermelon.jpg" width="200" height="200" alt="">
-      <img class="pic" src="grapes.jpg" width="200" height="200" alt="">
-      <img class="pic" src="broccolini.jpg" width="200" height="200" alt="">
+      <img class="pic" src="sushi.jpg" alt="">
+      <img class="pic" src="watermelon.jpg" alt="">
+      <img class="pic" src="grapes.jpg" alt="">
+      <img class="pic" src="broccolini.jpg" width="24%" alt="">
     </div>
     <div class="column">
-      <img class="pic" src="salmon.jpg" width="200" height="200" alt="">
-      <img class="pic" src="stir fry.jpg" width="200" height="200" alt="">
-      <img class="pic" src="cheesecake.jpg" width="200" height="200" alt="">
-      <img class="pic" src="mashed potatoes.jpg" width="200" height="200" alt="">
+      <img class="pic" src="salmon.jpg" alt="">
+      <img class="pic" src="stir fry.jpg" alt="">
+      <img class="pic" src="cheesecake.jpg" alt="">
+      <img class="pic" src="mashed potatoes.jpg" alt="">
     </div>
-  </body>
+    <script>
+    document.getElementsByClassName("pic").addEventListener("onclick", myFunction());
+    function myFunction() {
+      alert("Hello\nHow are you?");
+    }
+    </script>
+</body>
+
 </html>
